maj header et page accueil

--- a/mobil_art.html
+++ b/mobil_art.html
@@ -6,12 +6,52 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
+        <title>Mobil'Art</title>
+        <meta name="description" content="Site de meubles artisanaux">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="assets/css/style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     </head>
     <body>
-       
+       <header><!--balise Header, en tête de notre page, qui comprendra notre logo, notre menu de navigation et notre image d'accueil-->
+           <h1>Mobil'Art</h1><!--titre de premier niveau--> 
+ 
+        <!--menu de navigation-->
+        <nav> <!--balise de navigation-->
+            <ul>
+                <li><a href="#home" >Accueil</a></li>
+                <li><a href="#realisations">Réalisations</a></li>
+                <li><a href="#expositions">Expositions</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li>
+                    <form action="#" method="POST">
+                        <input style="border-radius: 25px" type="text" name="search" id="search" placeholder="Rechercher">
+                        <input type="submit" name="searchButton" id="searchButton" value="Rechercher">
+                    </form>
+                </li>
+                <li><i class="fas fa-bars" id="navIcon"></i></li>
+            </ul>
+         </nav>
+
+         <!--image d'accueil-->
+         <img alt="Bois"  src="assets/images/pageaccueil.jpeg"/>
+        </header>
+
+         <!--page accueil-->
+         <section id="presentation">
+                <h2>Bienvenue chez Mobil'art !</h2>
+                <p>Mobil'art est une entreprise havraise qui design et crée vos meubles entièrement à la main depuis 2012 ! </br>
+                Nous tâchons d'utiliser le plus de matériaux de récupération afin de vous proposer des réalisations les plus éco responsables possible.</br>
+                Ainsi vous retrouverez dans nos créations divers objet que l'on peut rencontrer au quotidien , de l'ancienne voile de bateau, </br>
+                au simple bois flotté venu s'échouer sur nos plages.
+                Ainsi, toutes les pièces qui sortent de notre entreprise sont uniques !</p>
+        </section>
+
+        <!--page réalisations-->
+        
+        <!--page expositions-->
+
+        <!--page contact-->
+
     </body>
 </html>
