--- a/mobil_art.html
+++ b/mobil_art.html
@@ -52,6 +52,20 @@
         <!--page expositions-->
 
         <!--page contact-->
+        <footer id="contact">
+            <img alt="phone" src="assets/images/pictotel.png" class="imgTel">
+            <img alt="mail" src="assets/images/pictomail.png" class="imgMail">
+
+            <a href="https://bit.ly/2xkfDgE" target="blank">
+            <img alt="Instagram" src="assets/images/pictoinstagram.png" class="imgInsta"></a>
+
+            <a href="https://bit.ly/3ekPXAR" target="blank">
+            <img alt="Pinterest" src="assets/images/pictopinterest.png" class="imgPinterest"></a>
+
+            <a href="https://bit.ly/34zVbo1" target="blank">
+            <img alt="Maps" src="assets/images/pictogooglemap.png" class="imgMaps"></a>
+            <p> &copy;Mobil'Art</p>
+        </footer>
 
     </body>
 </html>
