--- a/mobil_art.html
+++ b/mobil_art.html
@@ -13,9 +13,13 @@
         <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     </head>
     <body>
-       <header><!--balise Header, en tête de notre page, qui comprendra notre logo, notre menu de navigation et notre image d'accueil-->
+       <header><!--balise Header, en tête de notre page, qui comprendra : notre logo, notre contact tel, notre menu de navigation, notre image d'accueil-->
+        <section id="entete">
            <h1>Mobil'Art</h1><!--titre de premier niveau--> 
- 
+           <img alt="phone" src="assets/images/pictotel.png" id="imgTel"/><a href="tel:+33600000000">06.00.00.00.00</a>
+        </section>
+    </br>
+    </br>
         <!--menu de navigation-->
         <nav> <!--balise de navigation-->
             <ul>
@@ -34,7 +38,7 @@
          </nav>
 
          <!--image d'accueil-->
-         <img alt="Bois"  src="assets/images/pageaccueil.jpeg"/>
+         <img alt="Bois"  src="assets/images/pageaccueil.jpeg" class="imgHome"/>
         </header>
 
          <!--page accueil-->
