--- a/mobil_art.html
+++ b/mobil_art.html
@@ -37,8 +37,20 @@
             </ul>
          </nav>
 
-         <!--image d'accueil-->
-         <img alt="Bois"  src="assets/images/pageaccueil.jpeg" class="imgHome"/>
+         <!--slider accueil-->
+         <div id="slider">
+            <div id="slides">
+                <figure id="slide1">
+                    <img src="assets/images/pageaccueil.jpeg" alt="rondin de bois">
+                </figure>
+                <figure id="slide2">
+                    <img src="assets/images/imageslider2.jpg" alt="outils à bois">
+                </figure>
+                <figure id="slide3">
+                    <img src="assets/images/imageslider3.jpg" alt="travail du bois">
+                </figure>
+           </div>
+        </div>
         </header>
 
          <!--page accueil-->
@@ -54,6 +66,25 @@
         <!--page réalisations-->
         
         <!--page expositions-->
+        <section class="expositions">
+        <h2> Expositions</h2>
+        <p>Nos oeuvres seront exposées prochainement lors de plusieurs grands salons de l'ameublement :</p>
+        <div class="expoBlock">
+            Salon Maison & Objets - Paris Nord 2 Villepinte </br>
+            Du 05 au 07 juin 2020 - Hall 5B / Stand H28
+            <img src="assets/images/expom&o.jpg" alt="expo m&o">
+        </div>
+        <div class="expoBlock">
+            Salon Esprit Meubles - Paris Porte de Versailles </br>
+            Du 03 au 05 juillet 2020 - Hall 2 / Stand B41
+            <img src="assets/images/expoespritmeubles.jpg" alt="expo espritmeubles">
+        </div>
+        <div class="expoBlock">
+            Salon IFFS (Internation Fair Furniture Singapore) - Singapour </br>
+            Du 25 au 3 juillet 2020 - Hall 4 / Stand D20
+            <img src="assets/images/expoiffs.jpg" alt="expo iffs">
+        </div>
+    </section>
 
         <!--page contact-->
         <section id="contact">
