--- a/mobil_art.html
+++ b/mobil_art.html
@@ -40,7 +40,6 @@
             </ul>
          </nav>
 
-<<<<<<< HEAD
          <!--slider accueil-->
          <div id="slider">
             <div id="slides">
@@ -55,17 +54,12 @@
                 </figure>
            </div>
         </div>
-=======
-         <!--image d'accueil-->
-         <img alt="Bois"  src="assets/images/pageaccueil.jpeg" class="imgHome"/>
-
->>>>>>> 985587b595447065703a1a2f2e60ca2823da7b63
         </header>
 
          <!--page accueil-->
          <section id="presentation">
 
-                <h2>Bienvenue chez Mobil'art !</h2>
+                <h2>BIENVENUE CHEZ MOBIL'ART !</h2>
 
                       <p>Mobil'art est une entreprise havraise qui design et crée vos meubles entièrement à la main depuis 2012 ! </br>
                          Nous tâchons d'utiliser le plus de matériaux de récupération afin de vous proposer des réalisations les plus éco responsables possible.</br>
@@ -78,22 +72,31 @@
         
         <!--page expositions-->
         <section class="expositions">
-        <h2> Expositions</h2>
+        <h2> EXPOSITIONS</h2>
         <p>Nos oeuvres seront exposées prochainement lors de plusieurs grands salons de l'ameublement :</p>
         <div class="expoBlock">
-            Salon Maison & Objets - Paris Nord 2 Villepinte </br>
-            Du 05 au 07 juin 2020 - Hall 5B / Stand H28
+            <p>Salon Maison & Objets - Paris Nord 2 Villepinte </br>
+            Du 05 au 07 juin 2020</br>
+            Hall 5B / Stand H28</p>
+            <div class="expoblockImg">
             <img src="assets/images/expom&o.jpg" alt="expo m&o">
         </div>
-        <div class="expoBlock">
-            Salon Esprit Meubles - Paris Porte de Versailles </br>
-            Du 03 au 05 juillet 2020 - Hall 2 / Stand B41
-            <img src="assets/images/expoespritmeubles.jpg" alt="expo espritmeubles">
         </div>
         <div class="expoBlock">
-            Salon IFFS (Internation Fair Furniture Singapore) - Singapour </br>
-            Du 25 au 3 juillet 2020 - Hall 4 / Stand D20
+            <p>Salon Esprit Meubles - Paris Porte de Versailles </br>
+            Du 03 au 05 juillet 2020</br>
+            Hall 2 / Stand B41</p>
+            <div class="expoblockImg">
+            <img src="assets/images/expoespritmeubles.jpg" alt="expo espritmeubles">
+        </div>
+        </div>
+        <div class="expoBlock">
+            <p>Salon IFFS (International Fair Funiture Singapore) - Singapour </br>
+            Du 25 au 3 juillet 2020</br>
+            Hall 4 / Stand D20</p>
+            <div class="expoblockImg">
             <img src="assets/images/expoiffs.jpg" alt="expo iffs">
+        </div>
         </div>
     </section>
 
