--- a/mobil_art.html
+++ b/mobil_art.html
@@ -64,6 +64,28 @@
         <!--page contact-->
         <section id="contact"> 
 
+           <fieldset>
+            <form method="post"class="fieldset form"> <!-- formulaire de contact-->
+                <legend >Contactez nous</legend>
+                <div>
+                    <label for="name">Nom:</label>
+                    <input type="text" id="name" name="name" placeholder="Nom">
+                    <label for="mail">Votre adresse email :</label>
+                    <input type="text" id="mail" name="mail" placeholder="Email">
+                </div>   
+
+                <div>
+                    <label for="phone">Téléphone:</label>
+                    <input type="number" id="phone" name="phone" placeholder="telephone">
+                </div>
+
+                <div>
+                    <label for="message">Votre message:</label>
+                    <textarea name="message"></textarea>
+                </div>
+            </fieldset>
+            </form>
+
             <img alt="phone" src="assets/images/pictotel.png" class="imgTel"> <!--html pictograme telephone-->
             <img alt="mail" src="assets/images/pictomail.png" class="imgMail"> <!-- html pictograme mail-->
 
