--- a/mobil_art.html
+++ b/mobil_art.html
@@ -47,7 +47,47 @@
                 Ainsi, toutes les pièces qui sortent de notre entreprise sont uniques !</p>
         </section>
 
-        <!--page réalisations-->
+        <!--Nos réalisations-->
+        <section class="realisations">
+            <h2>REALISATIONS</h2>
+            <div class="realisationBlock">
+                <div class="realblockImg">
+                <img alt= "bancblancflote" src="assets/images/bancboisflotte.jpg" />
+            </div>
+                <div class="realisationTop">
+                    <h4>Le Banc des naufragés </h4>
+                            <p>On raconte que ce banc fût apporté par la mer lors d'une des tempêtes hivernales.
+                            Ce banc entièrement réalisé en bois flotté est une pièce unique, comme toutes nos autres créations. Cette oeuvre a necessité  deux mois de travail. 
+                            Récuperer et sélectionner les matériaux fût une grosse partie du projet, puis il a fallu tailler et mettre en forme la pièce entière . 
+                            L'assise étant profonde vous pourrez aisément installer un  grand coussin  et faire la sieste en imaginant l'histoire des naufragés ayant utilisé ce banc.</p>
+
+            </div>
+            </div>
+
+        <div class= "realisationBlock">
+            <h4>Cocooning</h4>
+                <p>Cette pièce s'incorporera parfaitement dans votre salle de bain, vous rappellant vos dernières vacances à la campagne . Pour cette réalisation, 60 heures de travail ont été nécessaires , toujours avec du bois de récupération. Les agents nécessaires au traitement du bois sont tous éco-responsable .
+                    Un moment détente , qui ne vous donnera pas envie de quitter votre salle de bain de sitôt !</p>
+            <div class="realblockImg">
+                <img alt="imgcocooning" src="assets/images/meublesdb.jpg" />
+                </div>
+                <div class="realisationMiddle">
+                
+        </div>
+        </div>
+
+        <div class="realisationBlock">
+            <div class="realblockImg">
+                <img alt="imgreve" src="assets/images/banquetteboisflotte.jpg" />
+            </div>
+            <div class="realisationTop">
+                <h4>Au fil des rêves</h4>
+                <p>Cette réalisation dont l'armature est une ancienne barque a nécessité  90 heures de travail afin de remettre en état le bateau. Nous avons ensuite appliqué les différents vernis afin de protéger le bois et ainsi assurer sa perennité dans le temps.
+                    Une assise en bois sur mesure a donc été créée afin de s'adapter parfaitement aux dimensions du support . Il ne vous reste plus qu'à ajouter vos coussins les plus confortables et profiter du soleil !</p>
+        </div>
+        </div>            
+
+    </section>
         
         <!--page expositions-->
 
