--- a/mobil_art.html
+++ b/mobil_art.html
@@ -130,10 +130,10 @@
                             <div>
                               <input type="submit" value="envoyer">
                             </div>
+                        </form>
              </fieldset>
-                         </form>
-
-                         <div>
+                        
+                         <div class='pictoC'>
                                  <a href="tel:+33600000000">
                                      <img alt="phone" src="assets/images/pictotel.png" class="imgTel"></a> <!--html pictograme telephone-->
                     
