maj page réalisations

--- a/mobil_art.html
+++ b/mobil_art.html
@@ -55,7 +55,8 @@
            </div>
         </div>
         </header>
-
+    </br>
+    </br>
          <!--page accueil-->
          <section id="presentation">
 
@@ -66,9 +67,11 @@
                          Ainsi vous retrouverez dans nos créations divers objet que l'on peut rencontrer au quotidien , de l'ancienne voile de bateau, </br>
                          au simple bois flotté venu s'échouer sur nos plages.
                          Ainsi, toutes les pièces qui sortent de notre entreprise sont uniques !</p>
+                    </br>
         </section>
-
-        <!--Nos réalisations-->
+</br>
+</br>
+        <!--page réalisations-->
         <section class="realisations">
             <h2>REALISATIONS</h2>
             <div class="realisationBlock">
@@ -81,20 +84,18 @@
                             Ce banc entièrement réalisé en bois flotté est une pièce unique, comme toutes nos autres créations. Cette oeuvre a necessité  deux mois de travail. 
                             Récuperer et sélectionner les matériaux fût une grosse partie du projet, puis il a fallu tailler et mettre en forme la pièce entière . 
                             L'assise étant profonde vous pourrez aisément installer un  grand coussin  et faire la sieste en imaginant l'histoire des naufragés ayant utilisé ce banc.</p>
-
             </div>
             </div>
 
-        <div class= "realisationBlock">
+        <div class= "realisationblockCenter">
+            <div class="realisationMiddle">
             <h4>Cocooning</h4>
                 <p>Cette pièce s'incorporera parfaitement dans votre salle de bain, vous rappellant vos dernières vacances à la campagne . Pour cette réalisation, 60 heures de travail ont été nécessaires , toujours avec du bois de récupération. Les agents nécessaires au traitement du bois sont tous éco-responsable .
                     Un moment détente , qui ne vous donnera pas envie de quitter votre salle de bain de sitôt !</p>
-            <div class="realblockImg">
-                <img alt="imgcocooning" src="assets/images/meublesdb.jpg" />
                 </div>
-                <div class="realisationMiddle">
-                
-        </div>
+                    <div class="realblockimgCenter">
+                <img alt="imgcocooning" src="assets/images/meublesdb.jpg" />
+        </div> 
         </div>
 
         <div class="realisationBlock">
@@ -107,9 +108,9 @@
                     Une assise en bois sur mesure a donc été créée afin de s'adapter parfaitement aux dimensions du support . Il ne vous reste plus qu'à ajouter vos coussins les plus confortables et profiter du soleil !</p>
         </div>
         </div>            
-
     </section>
-        
+</br>
+</br>
         <!--page expositions-->
         <section class="expositions">
                    <h2> EXPOSITIONS</h2>
