--- a/mobil_art.html
+++ b/mobil_art.html
@@ -10,6 +10,7 @@
         <meta name="description" content="Site de meubles artisanaux">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="styleresponsive" href="assets/css/Responsive.css">
         <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     </head>
     <body>
