--- a/mobil_art.html
+++ b/mobil_art.html
@@ -9,7 +9,8 @@
         <title>Mobil'Art</title>
         <meta name="description" content="Site de meubles artisanaux">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="assets/css/style.css" media="screen and (max-width:992px)" href="assets/css/Responsive.css">
+        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="responsive" media="screen and (max-width:992px)" href="assets/css/Responsive.css">
         <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     </head>
     <body>
